# chatter

./: .gitignore  Cargo.toml  README.md
src/: api.rs  app.rs  app_event.rs  command_popup.rs  commands.rs  config.rs  custom_terminal.rs  insert_history.rs  lib.rs  logger.rs  main.rs  provider.rs  runtime.rs  session.rs  state.rs  terminal.rs  textarea.rs  ui.rs  user_config.rs  wrapping.rs
tests/: insert_history.rs
tests/common/: mod.rs
