[package]
name = "chatter"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "chatter"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.29", features = ["unstable-rendered-line-info", "scrolling-regions", "unstable-backend-writer"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "0.8", features = ["preserve_order"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
textwrap = "0.16"
unicode-width = "0.2"
derive_more = { version = "1", features = ["is_variant"] }

[dev-dependencies]
vt100 = "0.15"
pretty_assertions = "1"

